--- a/.gitmodules
+++ b/.gitmodules
@@ -215,3 +215,6 @@
 [submodule "bundle/vim-interestingwords"]
 	path = bundle/vim-interestingwords
 	url = https://github.com/lfv89/vim-interestingwords.git
+[submodule "fzf"]
+	path = bundle/fzf
+	url = https://github.com/junegunn/fzf.vim.git
